fixed social media icon alignment

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 .Profile {
   margin: 24px;
+  font-size: x-large;
 }
 
 body {
@@ -47,5 +48,5 @@ nav {
   align-items: baseline;
   margin-bottom: 0;
   position: relative;
-  top: 30px;
+  top: 0px;
 }
